--- a/service.html
+++ b/service.html
@@ -90,11 +90,10 @@
                 <div class="nav-item dropdown">
                     <a href="products.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="feature.html" class="dropdown-item">Quality Assurance </a>
- 
-                        <a href="feature.html" class="dropdown-item">Manufacturing</a>
-                        <a href="feature.html" class="dropdown-item">Equipment Management</a>
-                        <a href="feature.html" class="dropdown-item">Quality Control</a>
+                        <a href="products.html" class="dropdown-item">Quality Assurance </a>
+                        <a href="products.html" class="dropdown-item">Manufacturing</a>
+                       <a href="products.html" class="dropdown-item">Equipment Management</a>
+                       <a href="products.html" class="dropdown-item">Quality Control</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -121,7 +120,7 @@
     <!-- Page Header End -->
 
  
-<!-- Service Start -->
+<!-- Service Start 
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
@@ -222,81 +221,50 @@
         </div>
     </div>
 </div>
-<!-- Service End -->
+  Service End -->
+
+ 
+ 
+<div class="container">
+    <h6 class="text-primary">Services</h6>
+
+
+        <p>
+
+        General validation activities with paper and manual-based validation processes cause compliance risk bringing products to the market on time. The validation activities have become important around documentation for ensuring quality. Current validation process requires a high degree of manual effort for tracking and reporting and the execution of most validation protocols takes place on paper and adds value to organization by adopting software that increases productivity and quality.
+        <br/><br/>
+        Prakshitha Controlsprovides a variety Computer System Validation of services to help your company ensure compliance (FDA, EMEA, MHLW,GAMP etc……..) and offers validation support and documentation.
+
+        <li> Validation is applied to systems satisfying regulatory requirements in the Pharmaceutical, healthcare and medical devices industry</li>
+        <li> CSV includes validation of both new and existing computer systems</li>
+        <li> A “computer system” is defined as “any programmable device procedures including its software, hardware, peripherals , users, interconnections and inputs for the electronic processing and output of information used for reporting or control.</li>
+        <li>The validation effort required for computer systems varies based on the -
+        <li>Level of risk that use of the system presents (direct vs. indirect impact on patients)
+
+        <li>  Type of system (configurable vs. bespoke)</li>
+
+        <li> Validation effort and activities are undertaken based on the appropriate GAMP software category.</li>
+        <br/><br/>
+
+        Companies struggle to create goals, processes, culture, management, and incentives that build infrastructure. Computer Systems (software) are a dominant and increasing part of business infrastructure. Computer System Validation is process validation and has the following benefits:
+
+        <li>Excellent Return On Investment (ROI) - Cost of compliance is low with respect to potential loss of intellectual property or other potential losses.</li>
+        <li>Provides documentation required by FDA,EMEA, other regulatory agencies, and your customers.</li>
+        <li>Maximizes the value of the computer system and the employees that use it.</li>
+        <li>Enhances project management to ensure projects are implemented on schedule and on budget.</li>
+        <li>Saves money by discovering defects early, before failures occur in production.</li>
+        <li>Reduces risk. Legal liability, not regulatory, is often the most important reason to 
+        perform validation. Software is made and used by people so it is guaranteed to be imperfect.
+        Software and process defects increase with software complexity. Having the evidence that 
+        computer systems are correct for 
+        their purpose and operating properly represents a good business practice.</li>
+        <li>Promotes continual process improvement. Software is constantly evolving to keep up with the increasingly complex needs of the people that use it. Therefore, validation is an ongoing necessity.</li>
+        </p>
+  </div>
 
  
 
-    <!-- Feature Start -->
-    <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
-        <div class="container feature px-lg-0">
-            <div class="row g-0 mx-lg-0">
-                <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="p-lg-5 ps-lg-0">
-                        <h6 class="text-primary">Why Choose Us!</h6>
-                        <h1 class="mb-4">Software solutions for Pharma & Biotech industry</h1>
-                        <p class="mb-4 pb-2">Our products are user-friendly, convenient, follow the existing procedures in industry and cost-effective.
-
-                        </p>
-                        <div class="row g-4">
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="btn-lg-square bg-primary rounded-circle">
-                                        <i class="fa fa-check text-white"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="mb-0">Quality</p>
-                                        <h5 class="mb-0">Services</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="btn-lg-square bg-primary rounded-circle">
-                                        <i class="fa fa-user-check text-white"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="mb-0">Expert</p>
-                                        <h5 class="mb-0">Workers</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="btn-lg-square bg-primary rounded-circle">
-                                        <i class="fa fa-drafting-compass text-white"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="mb-0">Free</p>
-                                        <h5 class="mb-0">Consultation</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="btn-lg-square bg-primary rounded-circle">
-                                        <i class="fa fa-headphones text-white"></i>
-                                    </div>
-                                    <div class="ms-4">
-                                        <p class="mb-0">Customer</p>
-                                        <h5 class="mb-0">Support</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/feature.jpg" style="object-fit: cover;" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Feature End -->
-
-
-    <!-- Testimonial Start -->
+    <!-- Testimonial Start 
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
@@ -346,7 +314,7 @@
             </div>
         </div>
     </div>
-    <!-- Testimonial End -->
+    Testimonial End -->
         
  
     <!-- Footer Start -->
