--- a/index.html
+++ b/index.html
@@ -91,11 +91,10 @@
                 <div class="nav-item dropdown">
                     <a href="products.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="feature.html" class="dropdown-item">Quality Assurance </a>
- 
-                        <a href="feature.html" class="dropdown-item">Manufacturing</a>
-                        <a href="feature.html" class="dropdown-item">Equipment Management</a>
-                        <a href="feature.html" class="dropdown-item">Quality Control</a>
+                        <a href="products.html" class="dropdown-item">Quality Assurance </a>
+                         <a href="products.html" class="dropdown-item">Manufacturing</a>
+                        <a href="products.html" class="dropdown-item">Equipment Management</a>
+                        <a href="products.html" class="dropdown-item">Quality Control</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
