--- a/products.html
+++ b/products.html
@@ -224,18 +224,18 @@
                                     </div>
                                     <div class="ms-4">
                                         <p class="mb-0">Expert</p>
-                                        <h5 class="mb-0">Workers</h5>
+                                        <h5 class="mb-0">Programmers</h5>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="btn-lg-square bg-primary rounded-circle">
-                                        <i class="fa fa-drafting-compass text-white"></i>
+                                        <i class="fa fa-clock text-white"></i>
                                     </div>
                                     <div class="ms-4">
                                         <p class="mb-0">Free</p>
-                                        <h5 class="mb-0">Consultation</h5>
+                                        <h5 class="mb-0">Demo</h5>
                                     </div>
                                 </div>
                             </div>
