--- a/service.html
+++ b/service.html
@@ -223,45 +223,49 @@
 </div>
   Service End -->
 
- 
- 
-<div class="container">
-    <h6 class="text-primary">Services</h6>
+  <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+    <div class="container about px-lg-0">
+        <div class="row g-0 mx-lg-0">
+
+            <div class="service">
+                <h6 class="text-primary">Services</h6>
 
 
-        <p>
+                    <p>
 
-        General validation activities with paper and manual-based validation processes cause compliance risk bringing products to the market on time. The validation activities have become important around documentation for ensuring quality. Current validation process requires a high degree of manual effort for tracking and reporting and the execution of most validation protocols takes place on paper and adds value to organization by adopting software that increases productivity and quality.
-        <br/><br/>
-        Prakshitha Controlsprovides a variety Computer System Validation of services to help your company ensure compliance (FDA, EMEA, MHLW,GAMP etc……..) and offers validation support and documentation.
+                    General validation activities with paper and manual-based validation processes cause compliance risk bringing products to the market on time. The validation activities have become important around documentation for ensuring quality. Current validation process requires a high degree of manual effort for tracking and reporting and the execution of most validation protocols takes place on paper and adds value to organization by adopting software that increases productivity and quality.
+                    <br/><br/>
+                    Prakshitha Controlsprovides a variety Computer System Validation of services to help your company ensure compliance (FDA, EMEA, MHLW,GAMP etc……..) and offers validation support and documentation.
 
-        <li> Validation is applied to systems satisfying regulatory requirements in the Pharmaceutical, healthcare and medical devices industry</li>
-        <li> CSV includes validation of both new and existing computer systems</li>
-        <li> A “computer system” is defined as “any programmable device procedures including its software, hardware, peripherals , users, interconnections and inputs for the electronic processing and output of information used for reporting or control.</li>
-        <li>The validation effort required for computer systems varies based on the -
-        <li>Level of risk that use of the system presents (direct vs. indirect impact on patients)
+                    <li> Validation is applied to systems satisfying regulatory requirements in the Pharmaceutical, healthcare and medical devices industry</li>
+                    <li> CSV includes validation of both new and existing computer systems</li>
+                    <li> A “computer system” is defined as “any programmable device procedures including its software, hardware, peripherals , users, interconnections and inputs for the electronic processing and output of information used for reporting or control.</li>
+                    <li>The validation effort required for computer systems varies based on the -
+                    <li>Level of risk that use of the system presents (direct vs. indirect impact on patients)
 
-        <li>  Type of system (configurable vs. bespoke)</li>
+                    <li>  Type of system (configurable vs. bespoke)</li>
 
-        <li> Validation effort and activities are undertaken based on the appropriate GAMP software category.</li>
-        <br/><br/>
+                    <li> Validation effort and activities are undertaken based on the appropriate GAMP software category.</li>
+                    <br/><br/>
 
-        Companies struggle to create goals, processes, culture, management, and incentives that build infrastructure. Computer Systems (software) are a dominant and increasing part of business infrastructure. Computer System Validation is process validation and has the following benefits:
+                    Companies struggle to create goals, processes, culture, management, and incentives that build infrastructure. Computer Systems (software) are a dominant and increasing part of business infrastructure. Computer System Validation is process validation and has the following benefits:
 
-        <li>Excellent Return On Investment (ROI) - Cost of compliance is low with respect to potential loss of intellectual property or other potential losses.</li>
-        <li>Provides documentation required by FDA,EMEA, other regulatory agencies, and your customers.</li>
-        <li>Maximizes the value of the computer system and the employees that use it.</li>
-        <li>Enhances project management to ensure projects are implemented on schedule and on budget.</li>
-        <li>Saves money by discovering defects early, before failures occur in production.</li>
-        <li>Reduces risk. Legal liability, not regulatory, is often the most important reason to 
-        perform validation. Software is made and used by people so it is guaranteed to be imperfect.
-        Software and process defects increase with software complexity. Having the evidence that 
-        computer systems are correct for 
-        their purpose and operating properly represents a good business practice.</li>
-        <li>Promotes continual process improvement. Software is constantly evolving to keep up with the increasingly complex needs of the people that use it. Therefore, validation is an ongoing necessity.</li>
-        </p>
-  </div>
-
+                    <li>Excellent Return On Investment (ROI) - Cost of compliance is low with respect to potential loss of intellectual property or other potential losses.</li>
+                    <li>Provides documentation required by FDA,EMEA, other regulatory agencies, and your customers.</li>
+                    <li>Maximizes the value of the computer system and the employees that use it.</li>
+                    <li>Enhances project management to ensure projects are implemented on schedule and on budget.</li>
+                    <li>Saves money by discovering defects early, before failures occur in production.</li>
+                    <li>Reduces risk. Legal liability, not regulatory, is often the most important reason to 
+                    perform validation. Software is made and used by people so it is guaranteed to be imperfect.
+                    Software and process defects increase with software complexity. Having the evidence that 
+                    computer systems are correct for 
+                    their purpose and operating properly represents a good business practice.</li>
+                    <li>Promotes continual process improvement. Software is constantly evolving to keep up with the increasingly complex needs of the people that use it. Therefore, validation is an ongoing necessity.</li>
+                    </p>
+            </div>
+</div>
+</div>
+</div>
  
 
     <!-- Testimonial Start 
