--- a/about.html
+++ b/about.html
@@ -126,6 +126,8 @@
  <div class="container-xxl py-5">
     <div class="container">
         <h6 class="text-primary">About Us</h6>
+
+        <h1>  Prakshitha Controls       </h1>
             <p style="text-align: justify;">
                
             
