--- a/service.html
+++ b/service.html
@@ -227,7 +227,7 @@
  <div class="container-xxl py-5">
     <div class="container">
              <h6 class="text-primary">Services</h6>
-           
+             <h1>  Prakshitha controls       </h1>
             <p style="text-align: justify;">
 
                 General validation activities with paper and manual-based validation processes cause compliance risk bringing products to the market on time. The validation activities have become important around documentation for ensuring quality. Current validation process requires a high degree of manual effort for tracking and reporting and the execution of most validation protocols takes place on paper and adds value to organization by adopting software that increases productivity and quality.
