--- a/products.html
+++ b/products.html
@@ -248,14 +248,14 @@
 <p>A quality management system (QMS) is a collection of business processes focused on achieving quality policy and 
 quality objectives to meet customer requirements. 
 It is expressed as the organizational structure, policies, procedures, processes and resources needed to implement quality management.
- Of all QMS regimes, Pharma Soft Sol Quality Management System Software deals with quality and sustainability and their integration.</p>
- <p>Pharma Soft Sol’s  <strong>softQMS</strong> can be used for many reasons, including the management of compliance, facilitating the investigation 
+ Of all QMS regimes, Prakshitha Controls  Quality Management System Software deals with quality and sustainability and their integration.</p>
+ <p>Prakshitha Controls ’s  <strong>softQMS</strong> can be used for many reasons, including the management of compliance, facilitating the investigation 
  of adverse events and the proceeding corrective actions, managing risk, and, among many others, integrating complaint management 
  into the quality management process. softQMS  is in line with International Conference on Harmonization (ICH) guidance 
  like ICH Q10 Pharmaceutical Quality System, ICH Q9 Quality Risk Management, and with WHO, FDA and EU requirements.
  softQMS  helps organization to design, implementation, monitoring, and maintenance of an effective pharmaceutical quality system.
  softQMS is an integrated software and structured to work harmoniously as a single quality system for organizations.<br>
- Pharma Soft Sol softQMS Software included with the following modules but not limited to</p>
+ Prakshitha Controls  softQMS Software included with the following modules but not limited to</p>
 <ul>
 <li><strong>Change Management</strong></li>
 <li><strong>Deviations or Non conformance Management</strong></li>
